modules/ec2/main.tf
resource "aws_security_group" "ec2_sg" {
  vpc_id = var.vpc_id

  name = "${var.project_name}-${var.environment}-sg"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-sg"
  }
}


resource "aws_instance" "app" {
  ami           = var.ami
  instance_type = var.instance_type

  subnet_id = var.subnet_id

  vpc_security_group_ids = [aws_security_group.ec2_sg.id]

  key_name = var.key_name

  tags = {
    Name = "${var.project_name}-${var.environment}-ec2"
  }
}
